day10-ingress/k8s/path-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: event-api
            port:
              number: 80
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: event-api-probes
            port:
              number: 80
